--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(nav.css);
 @import url(welcome.css);
 @import url(products.css);
+@import url(products_grid_filter.css);
 
 :root {
   --clr-body-dark: hsl(212, 14%, 21%);
@@ -14,10 +15,13 @@
 
   --ff: "Roboto", sans-serif;
 
-  --padding-general: 4rem;
+  --padding-general-sides: 4rem;
+  --margin-vert-between-sections: 3rem;
   --max-width-general: 1200px;
   --height-header-desktop: 140px;
 }
+
+/* ------ GENERAL STYLING AND BODY ------ */
 
 body {
   font-family: var(--ff);
@@ -25,10 +29,42 @@ body {
   color: var(--clr-body-light);
   /* overflow: hidden; */
   transition: all 200ms ease;
+  /* overflow: hidden; */
 }
+
+/* ------ UTILITIES ------ */
+
+/* ------ MAIN CONTAINER ------ */
 
 .main-container {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+}
+
+/* <- welcome -> */
+
+/* <- products -> */
+
+.products__filter {
+  width: 100vw;
+
+  margin-top: var(--margin-vert-between-sections);
+  margin-bottom: var(--margin-vert-between-sections);
+}
+
+.grid-container {
+  width: min(
+    var(--max-width-general),
+    100vw - 2 * var(--padding-general-sides)
+  );
+  margin-inline: auto;
+  margin-top: var(--margin-vert-between-sections);
+  margin-bottom: var(--margin-vert-between-sections);
+}
+.filter__list {
+  width: min(
+    var(--max-width-general),
+    100vw - 2 * var(--padding-general-sides)
+  );
+  margin-inline: auto;
 }
