--- a/css/nav.css
+++ b/css/nav.css
@@ -18,6 +18,7 @@ header {
   align-items: flex-end;
   border-bottom: 1px solid white;
   padding-top: 1rem;
+  align-items: center;
 }
 .logo {
   font-size: 1.75rem;
@@ -26,7 +27,6 @@ header {
 .nav__list {
   display: flex;
   gap: 1rem;
-  padding-bottom: 0.35rem;
 }
 
 .fa-sun:hover {
@@ -34,4 +34,13 @@ header {
 }
 .fa-moon:hover {
   cursor: pointer;
+}
+
+@media (max-width: 470px) {
+  .full-nav {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+  }
 }
