--- a/css/products_grid_filter.css
+++ b/css/products_grid_filter.css
@@ -1,16 +1,15 @@
 :root {
-  --clr-product-card-background: hsl(212, 14%, 31%);
   --padding-filter: 1rem;
 }
 
 /* ------ FILTER ------ */
 
 .products__filter {
-  border-bottom: 1px solid white;
-  border-top: 1px solid white;
+  border-bottom: 1px solid var(--clr-body-dark);
+  border-top: 1px solid var(--clr-body-dark);
   padding-top: var(--padding-filter);
   padding-bottom: var(--padding-filter);
-  background-color: var(--clr-body-dark);
+  background-color: var(--clr-body-light);
   position: sticky;
   top: 58px;
   z-index: 21;
@@ -36,7 +35,8 @@
   transform: translateX(50%);
   top: -17px;
   border: 10px solid;
-  border-color: rgb(255, 255, 255) #0000 #0000 #0000;
+  border-radius: 10px;
+  border-color: var(--clr-body-dark) #0000 #0000 #0000;
 }
 
 @media (max-width: 470px) {
@@ -63,11 +63,37 @@
 
 .product-card {
   border-radius: 0.75rem;
-  overflow: hidden;
-  background-color: var(--clr-product-card-background);
+  /* overflow: hidden; */
+  background-color: var(--clr-body-light);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
+.product-img-container {
+  display: flex;
+  height: 60%;
+  position: relative;
+}
+.test-figure {
+  flex-shrink: 0;
+}
 .product-card__img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.carousel-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  width: 10%;
+  height: 100%;
+  background-color: hsla(0, 0%, 100%, 0.164);
+}
+.right-btn {
+  right: 0;
+}
+.left-btn {
+  left: 0;
 }
