--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(reset_tc_collection.css);
-@import url(carousel.css);
+/* @import url(carousel.css); */
 @import url(nav.css);
 @import url(welcome.css);
-@import url(products.css);
+/* @import url(products.css); */
 @import url(products_grid_filter.css);
 
 :root {
