--- a/css/products_grid_filter.css
+++ b/css/products_grid_filter.css
@@ -12,7 +12,7 @@
   background-color: var(--clr-body-light);
   position: sticky;
   top: 58px;
-  z-index: 21;
+  z-index: 3;
 }
 .filter__list {
   display: flex;
@@ -35,7 +35,7 @@
   transform: translateX(50%);
   top: -17px;
   border: 10px solid;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   border-color: var(--clr-body-dark) #0000 #0000 #0000;
 }
 
@@ -63,48 +63,24 @@
 
 .product-card {
   border-radius: 0.75rem;
+  position: relative;
   overflow: hidden;
   background-color: var(--clr-body-light);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
-.product-img-container {
-  display: flex;
-  height: 60%;
-  position: relative;
+.product-card__img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border: 2px solid red;
 }
 .carousel {
-  position: relative;
-  display: flex;
-  transition: all 300ms ease;
+  height: 65%;
 }
 
-.test-figure {
-  flex-shrink: 0;
-}
-
-.product-card__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.carousel-btn {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  width: 10%;
-  height: 100%;
-  background-color: hsla(0, 0%, 100%, 0.164);
-}
-.right-btn {
-  right: 0;
-}
-.left-btn {
-  left: 0;
-}
-
-.hidden {
-  display: none;
+@media (max-width: 470px) {
+  .product-card {
+    min-height: 300px;
+  }
 }
