--- a/css/nav.css
+++ b/css/nav.css
@@ -5,6 +5,7 @@ header {
   top: 0;
   transition: all 200ms ease;
   z-index: 2;
+  z-index: 5;
 }
 
 .nav-container {
@@ -42,18 +43,17 @@ header {
 .nav-container-mobile {
   visibility: hidden;
   position: fixed;
-  right: -300px;
-  top: 60px;
-  width: 200px;
-  height: 100vh;
-  z-index: 50;
+  /* right: -300px; */
+  top: -250px;
+  width: 100vw;
+  height: 260px;
+  z-index: 5;
   background-color: var(--clr-body-light);
   font-size: 1.75rem;
-
   transition: 0.75s cubic-bezier(0.84, 0.145, 0.18, 0.915);
-
   padding: 2rem;
   text-align: right;
+  overflow: hidden;
 }
 .mobile-nav-list {
   display: flex;
@@ -62,8 +62,20 @@ header {
 }
 .nav-container-mobile.open {
   visibility: visible;
-  right: 0;
+  top: 59px;
   box-shadow: 0 14px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.3);
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 4;
+  opacity: 0;
+  transition: 0.75s cubic-bezier(0.84, 0.145, 0.18, 0.915);
 }
 
 @media (max-width: 470px) {
