--- a/css/products_grid_filter.css
+++ b/css/products_grid_filter.css
@@ -44,15 +44,10 @@
 }
 
 /* ------ PRODUCT CARD ------ */
-
-.product-card:hover {
-  cursor: pointer;
-}
-
 .product-card {
   border-radius: 0.75rem;
   /* overflow: hidden; */
-  background-color: var(--clr-body-dark);
+  /* background-color: var(--clr-body-dark); */
 }
 
 .product-card > img {
@@ -65,6 +60,7 @@
 **************************/
 :root{
   --br: .5em;
+  --transition-bg: transform 200ms cubic-bezier(0.20, 1, 0.80, 1);
 }
 .grid-container img{
   max-width: 100%;
@@ -72,7 +68,7 @@
 
 .product-card{
   position: relative;
-  width: 12.5em;
+  width: 100%
 
 }
 
@@ -82,22 +78,28 @@
 
 }
 .icons img{
-  width: 2em;
-  height: 2em;
+  width: 1.5em;
+  height: 1.5em;
+  fill: white;
 }
 
 .rank{
   position: absolute;
+  z-index: 5;
+  transition: transform 250ms ease-in-out;
   font-weight: bold;
   top: 0;
   right: 1em;
-  font-size: 1.125rem;
+  font-size: 1rem;
   background: rgba(0, 0, 0, 0.65);
   padding: .5em .5em .75em;
   clip-path: polygon(100% 0%, 100% 100%, 50% 85%,0% 100%, 0 0);
 }
 
 /* card front */
+.card-front{
+  transition: 250ms;
+}
 .card-front .product-img{
   border-radius: var(--br);
 }
@@ -118,7 +120,67 @@
 
 /* background */
 .card-bg{
-  background: #234;
+  background:rgba(0, 0, 0, 1);
   position: absolute;
-
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  transform: scale(.4, .2);
+  border-radius: var(--br);
+  opacity: 0;
 }
+
+/* product card HOVER */
+.product-card:hover .card-front{
+  transform: translateY(-35%) scale(0.9);
+}
+.product-card:hover .rank{
+  transform: translate(140%, -29%);
+  background: white;
+}
+.product-card:hover .product-name{
+  animation: productName 250ms forwards;
+}
+.product-card:hover .card-bg{
+  transition: 
+    var(--transition-bg),
+    opacity 100ms linear;
+  transform: scale(1.25, 1.1);
+  opacity: 1;
+}
+.product-card:hover .product-price_icon{
+  opacity: 0;
+}
+/* .product-card:hover .product-img, .product-card:hover .product-name, .product-card:hover .rank{
+  z-index: 22;
+} */
+.product-card:hover .product-img{
+  z-index: 10000 ;
+}
+.icons img:hover{
+  cursor: pointer;
+}
+
+@keyframes productName {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+  10% {
+    text-align: left;
+    opacity: 0;
+  }
+  55% {
+    text-align: center;
+    opacity: 0;
+  }
+  100% {
+    text-align: center;
+    opacity: 1;
+  }
+}
+/* .product-img:hover .products__filter{
+  z-index:-1;
+} */
