--- a/css/products_grid_filter.css
+++ b/css/products_grid_filter.css
@@ -61,6 +61,7 @@
 :root{
   --br: .5em;
   --transition-bg: transform 200ms cubic-bezier(0.20, 1, 0.80, 1);
+  --clr-text-dark: rgba(25, 24, 26, 0);
 }
 .grid-container img{
   max-width: 100%;
@@ -68,8 +69,7 @@
 
 .product-card{
   position: relative;
-  width: 100%
-
+  width: 100%;
 }
 
 /* icons */
@@ -83,9 +83,9 @@
   fill: white;
 }
 
-.rank{
+.discount{
   position: absolute;
-  z-index: 5;
+  /* z-index: 5; */
   transition: transform 250ms ease-in-out;
   font-weight: bold;
   top: 0;
@@ -105,6 +105,8 @@
 }
 .card-front .product-name{
   margin: 0.75em 0.4em;
+  font-size: large;
+  font-weight: 600;
 }
 .card-front .product-price_icon{
   display: flex;
@@ -112,17 +114,77 @@
   align-items: center;
   margin: 0 .4em .5em .4em;
 }
+.card-front .icons{
+  display: flex;
+  justify-content: space-between;
+  gap:.3rem;
+}
 
 /* card back */
 .card-back {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  top: 49%;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5em;
+  transform: scale(0.1);
+}
+.card-back .ratings > img{
+  width: 1em;
+}
+
+.card-back > p{
+  text-align: center;
+  color: rgb(94, 94, 103);
+}
+
+.card-back button.label{
+  font-size: .75rem;
+  padding: .4em .9em;
+  margin: 0.25em;
+  border-radius: 1em;
+  border: none;
+  outline: none;
+  background: #dddddd;
+  cursor: pointer;
+}
+.card-back button.label:hover{
+  transform: scale(1.02);
+  background: #c5c5c5;
+  transition: transform 50ms ease;
+}
+.card-back .price_cart{
+  width: 100%;
+  margin: 1em 0;
+  columns: 2;
+  column-rule: 1px solid rgba(0, 0, 0, .25);
+}
+.card-back .price_cart > *{
+  font-size: 2rem;
+  text-align: center;
+}
+.card-back .price{
+  font-size: 1.5rem;
+  margin: auto auto;
+  font-weight: 400;
+  color: rgb(27, 27, 30);
+}
+.card-back .cart > img{
+  width: 2rem;
+  margin: auto auto;
 }
 
 /* background */
 .card-bg{
-  background:rgba(0, 0, 0, 1);
+  background:rgb(255, 255, 255);
   position: absolute;
-  top: 0;
+  top: 20%;
   bottom: 0;
   left: 0;
   right: 0;
@@ -136,28 +198,32 @@
 .product-card:hover .card-front{
   transform: translateY(-35%) scale(0.9);
 }
-.product-card:hover .rank{
-  transform: translate(140%, -29%);
-  background: white;
+.product-card:hover .discount{
+  opacity: 0;
 }
 .product-card:hover .product-name{
   animation: productName 250ms forwards;
+  font-weight: 400;
+  font-size: x-large;
+  color: rgb(24, 24, 26);
 }
 .product-card:hover .card-bg{
   transition: 
     var(--transition-bg),
     opacity 100ms linear;
-  transform: scale(1.25, 1.1);
+  transform: scale(1.2, 1.5);
   opacity: 1;
 }
 .product-card:hover .product-price_icon{
   opacity: 0;
 }
-/* .product-card:hover .product-img, .product-card:hover .product-name, .product-card:hover .rank{
-  z-index: 22;
-} */
 .product-card:hover .product-img{
   z-index: 10000 ;
+}
+.product-card:hover .card-back{
+  opacity: 1;
+  transform: scale(1);
+  transition: transform 200ms ease, opacity 150ms linear;
 }
 .icons img:hover{
   cursor: pointer;
