--- a/css/products_grid_filter.css
+++ b/css/products_grid_filter.css
@@ -72,16 +72,16 @@
 /**************************
  ---- new PRODUCT CARD ---- 
 **************************/
-:root{
-  --br: .5em;
-  --transition-bg: transform 200ms cubic-bezier(0.20, 1, 0.80, 1);
+:root {
+  --br: 0.5em;
+  --transition-bg: transform 200ms cubic-bezier(0.2, 1, 0.8, 1);
   --clr-text-dark: rgba(25, 24, 26, 0);
 }
-.grid-container img{
+.grid-container img {
   max-width: 100%;
 }
 
-.product-card{
+.product-card {
   position: relative;
   width: 100%;
   object-fit: cover;
@@ -94,17 +94,16 @@
 }
 
 /* icons */
-.icons{
+.icons {
   display: flex;
-
 }
-.icons img{
+.icons img {
   width: 1.5em;
   height: 1.5em;
   fill: white;
 }
 
-.discount{
+.discount {
   position: absolute;
   /* z-index: 5; */
   transition: transform 250ms ease-in-out;
@@ -113,32 +112,32 @@
   right: 1em;
   font-size: 1rem;
   background: rgba(0, 0, 0, 0.65);
-  padding: .5em .5em .75em;
-  clip-path: polygon(100% 0%, 100% 100%, 50% 85%,0% 100%, 0 0);
+  padding: 0.5em 0.5em 0.75em;
+  clip-path: polygon(100% 0%, 100% 100%, 50% 85%, 0% 100%, 0 0);
 }
 
 /* card front */
-.card-front{
+.card-front {
   transition: 250ms;
 }
-.card-front .product-img{
+.card-front .product-img {
   border-radius: var(--br);
 }
-.card-front .product-name{
+.card-front .product-name {
   margin: 0.75em 0.4em;
   font-size: large;
   font-weight: 600;
 }
-.card-front .product-price_icon{
+.card-front .product-price_icon {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 .4em .5em .4em;
+  margin: 0 0.4em 0.5em 0.4em;
 }
-.card-front .icons{
+.card-front .icons {
   display: flex;
   justify-content: space-between;
-  gap:.3rem;
+  gap: 0.3rem;
 }
 
 /* card back */
@@ -153,21 +152,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: .5em;
+  gap: 0.5em;
   transform: scale(0.1);
 }
-.card-back .ratings > img{
+.card-back .ratings > img {
   width: 1em;
 }
 
-.card-back > p{
+.card-back > p {
   text-align: center;
   color: rgb(94, 94, 103);
 }
 
-.card-back button.label{
-  font-size: .75rem;
-  padding: .4em .9em;
+.card-back button.label {
+  font-size: 0.75rem;
+  padding: 0.4em 0.9em;
   margin: 0.25em;
   border-radius: 1em;
   border: none;
@@ -175,82 +174,81 @@
   background: #dddddd;
   cursor: pointer;
 }
-.card-back button.label:hover{
+.card-back button.label:hover {
   transform: scale(1.02);
   background: #c5c5c5;
   transition: transform 50ms ease;
 }
-.card-back .price_cart{
+.card-back .price_cart {
   width: 100%;
   margin: 1em 0;
   columns: 2;
-  column-rule: 1px solid rgba(0, 0, 0, .25);
+  column-rule: 1px solid rgba(0, 0, 0, 0.25);
 }
-.card-back .price_cart > *{
+.card-back .price_cart > * {
   font-size: 2rem;
   text-align: center;
 }
-.card-back .price{
+.card-back .price {
   font-size: 1.5rem;
   margin: auto auto;
   font-weight: 400;
   color: rgb(27, 27, 30);
 }
-.card-back .cart > img{
+.card-back .cart > img {
   width: 2rem;
   margin: auto auto;
 }
 
 /* background */
-.card-bg{
-  background:rgb(255, 255, 255);
+.card-bg {
+  background: rgb(255, 255, 255);
   position: absolute;
   top: 20%;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 0;
-  transform: scale(.4, .2);
+  transform: scale(0.4, 0.2);
   border-radius: var(--br);
   opacity: 0;
 }
 
 /* product card HOVER */
-.product-card:hover .card-front{
+.product-card:hover .card-front {
   transform: translateY(-35%) scale(0.9);
 }
-.product-card:hover .discount{
+.product-card:hover .discount {
   opacity: 0;
 }
-.product-card:hover .product-name{
+
+.product-card:hover .product-name {
   animation: productName 250ms forwards;
   font-weight: 400;
   font-size: x-large;
   color: rgb(24, 24, 26);
 }
-.product-card:hover .card-bg{
-  transition: 
-    var(--transition-bg),
-    opacity 100ms linear;
+.product-card:hover .card-bg {
+  transition: var(--transition-bg), opacity 100ms linear;
   transform: scale(1.2, 1.4);
   opacity: 1;
 }
-.product-card:hover .product-price_icon{
+.product-card:hover .product-price_icon {
   opacity: 0;
 }
-.product-card:hover .card-back{
+.product-card:hover .card-back {
   opacity: 1;
   transform: scale(1);
   transition: transform 200ms ease, opacity 150ms linear;
 }
-.icons img:hover{
+.icons img:hover {
   cursor: pointer;
 }
-.product-card:hover ~ .product-card:not(:hover){
-    z-index: -1;
+.product-card:hover ~ .product-card:not(:hover) {
+  z-index: -1;
 }
 /* fix dit */
-.grid-container:has(.product-card:hover) ~ .products__filter{
+.grid-container:has(.product-card:hover) ~ .products__filter {
   z-index: -1;
 }
 
