--- a/scss/select.scss
+++ b/scss/select.scss
@@ -12,8 +12,7 @@
 
         margin-bottom: 5px;     
         box-sizing: border-box;
-        -webkit-appearance: none;
-        -moz-appearance: none;
+        appearance: none;
       }
     .wrap2 .select_input{
         display: flex;
