--- a/scss/add_product.scss
+++ b/scss/add_product.scss
@@ -4,6 +4,7 @@
 :root {
     --clr-body-dark: hsl(212, 14%, 27%);
     --clr-body-light: hsl(225, 100%, 98%);
+    --clr-body-darker: hsl(233, 22%, 92%);
     
     --ff: "Roboto", sans-serif;
     
@@ -11,6 +12,8 @@
     --margin-vert-between-sections: 3rem;
     --max-width-general: 1200px;
     --height-header-desktop: 140px;
+
+    --nav-bar-height: 50px;
 }
 
 /* ------ GENERAL STYLING AND BODY ------ */
@@ -24,6 +27,80 @@ body {
     }
     h2{
         font-weight: 600;
+    }
+}
+
+// nav bar: admin and add product page
+nav.main{
+    background-color: white;
+    height: var(--nav-bar-height);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: .4px solid #2d343c;
+    border-bottom: .4px solid #2d343c;
+    ul{
+        width: 60vw;
+        min-width: 500px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        .rechts{
+            width: 20%;
+            display: flex;
+            justify-content: space-between;
+            height: 100%;
+        }
+        li{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding: 0 1ch;
+            a{
+                font-weight: 700;
+            }
+            &:hover{
+                background-color: #2d343c;
+                color: white;
+            }
+        }
+        & > li{
+            display: flex;
+            align-items: center;
+        }
+    }
+}
+
+// adminpage
+main.admin{
+    section.welcome{
+        width: 100%;
+        height: calc(100vh - var(--nav-bar-height));
+        border-bottom: .4px solid #2d343c;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        h1{
+            font-size: 200px;
+            font-weight: 900;
+        }
+        a{
+            background-color: white;
+            border-radius: .5em;
+            padding: 1em 2.5em;
+            font-size: x-large;
+            font-weight: 700;
+            box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+            &:hover{
+                transform: scale(1.05);
+                transition: all ease-out 350ms;
+                box-shadow: 15px 15px 20px rgba(1, 1, 1, 0.05);
+            }
+        }
     }
 }
 
@@ -61,7 +138,7 @@ form{
 
 // General wrapper css
 .form-container{
-    padding: 4em var(--padding-general-sides) 1em var(--padding-general-sides);
+    padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -91,12 +168,18 @@ form{
 
 }
 // Title section
-.title-wrap{
+.title-wrap.wrapper{
     --toggle-size : 20px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    h1{
+        font-size: x-large;
+        font-weight: 700;
+    }
     .toggles{
-        width: 40%;
+        width: 100%;
         display: flex;
         justify-content: flex-end;
         gap: 20px;
@@ -106,6 +189,10 @@ form{
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            span{
+                font-weight: 700;
+                margin-bottom: 3px;
+            }
         }
     }
     input[type=checkbox]{
@@ -296,7 +383,7 @@ form{
     align-items: center;
     height: 8em;
     input[type="submit"]{
-        width: 25%;
+        width: 200px;
         height: 50px;
         border: 1px solid;
         background: #2d343c;
