Started setting up JSDocs
Also changed some scss file structure

--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -25,3 +25,24 @@
   text-align: center;
   font-size: 3rem;
 }
+
+
+.welcome__image {
+  height: 400px;
+}
+
+.logo-art{
+  height: 30px;
+}
+
+.logo-container{
+  display: flex;
+  gap: 10PX;
+  align-items: center;
+}
+
+.welcome-container{
+  display: flex;
+  align-items: center;
+}
+
