--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -1,10 +1,9 @@
 @import url(./reset_tc_collection.css);
-/* @import url(carousel.css); */
 @import url(./../css/nav.css);
 @import url(./../css/welcome.css);
 /* @import url(products.css); */
 @import url(./../css/products_grid_filter.css);
-@import url(./../css/welcomeTest.css);
+@import url(./../css/filter.css);
 
 :root {
   --clr-body-dark: hsl(212, 14%, 27%);
@@ -74,106 +73,6 @@ body {
 }
 
 /* Temporary filter section - to be moved to filter file */
-
-.subfilter-container {
-  width: min(
-    var(--max-width-general),
-    100vw - 2 * var(--padding-general-sides)
-  );
-  margin-inline: auto;
-}
-
-.subfilter {
-  display: flex;
-  justify-content: flex-start;
-  padding-bottom: 15px;
-  gap: 20px;
-  /* NO PIXELS? */
-}
-
-.subfilter__section {
-  position: relative;
-}
-
-.subfilter__selection {
-  position: absolute;
-  width: max-content;
-  display: flex;
-  flex-direction: column;
-}
-
-.general-subfilter-btn {
-  padding: 0.5rem 1.5rem;
-  border-radius: 0.25rem;
-  border: 1px solid black;
-  font-family: var(--ff);
-  cursor: pointer;
-}
-
-.subfilter__selection {
-  z-index: 2;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 0.25rem;
-  height: max-content;
-  background-color: var(--clr-body-light);
-  margin-top: 0.75rem;
-}
-.subfilter__row-container {
-  padding-inline: 1rem;
-  max-height: 200px;
-  /* CHANGE THIS? */
-  overflow-y: scroll;
-  padding-right: 3rem;
-}
-
-.subfilter__clear {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-
-  border-bottom: 1px solid gray;
-}
-.subfilter__clear > span {
-  cursor: pointer;
-  padding-left: 1rem;
-}
-
-.grid-container {
-  height: 60vh;
-  /* CHANGE THIS */
-}
-.subfilter-active {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  /* CHANGE THIS */
-  min-height: 30px;
-  /* CHANGE THIS */
-}
-
-.active-filter-btn {
-  font-size: smaller;
-  background-color: lightgray;
-  font-weight: 500;
-  color: black;
-  display: flex;
-  align-items: center;
-  border: none;
-  border-radius: 0.25rem;
-  gap: 10px;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-}
-.active-filter-btn:hover {
-  background-color: rgb(183, 182, 182);
-}
-
-/* Temp section for sort */
-
-.testBtn {
-  cursor: pointer;
-  border: 1px solid red;
-  padding: 0.5rem 1.5rem;
-}
 
 .hidden {
   display: none;
