--- a/scss/filter.scss
+++ b/scss/filter.scss
@@ -95,6 +95,7 @@
   
   .testBtn {
     cursor: pointer;
-    border: 1px solid red;
+    border: 1px solid green;
     padding: 0.5rem 1.5rem;
+    padding-left: auto;
   }
