started working on sorter selection

--- a/scss/filter.scss
+++ b/scss/filter.scss
@@ -93,9 +93,9 @@
   
   /* Temp section for sort */
   
-  .testBtn {
+  .sortDiv {
     cursor: pointer;
-    border: 1px solid green;
+    
     padding: 0.5rem 1.5rem;
-    padding-left: auto;
+    margin-left: auto;
   }
