--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -1,9 +1,10 @@
-@import url(./reset_tc_collection.css);
-@import url(./../css/nav.css);
-@import url(./../css/welcome.css);
+@import "./reset_tc_collection.css";
+@import "../css/nav.css";
+@import "../css/welcome.css";
 /* @import url(products.css); */
-@import url(./../css/products_grid_filter.css);
-@import url(./../css/filter.css);
+@import "../css/products_grid_filter.css";
+@import "../css/filter.css";
+@import "../CSS/test.css";
 
 :root {
   --clr-body-dark: hsl(212, 14%, 27%);
