--- a/scss/product-card.scss
+++ b/scss/product-card.scss
@@ -14,8 +14,7 @@
 
 .grid-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    grid-template-rows: repeat(auto-fit,minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     column-gap: 1.2rem;
     row-gap: 1.2rem;
     width: min(var(--max-width-general),100vw - 2 * var(--padding-general-sides));
@@ -40,7 +39,7 @@
 section.card-front{
     width: 100%;
     height: 100%;
-    padding: 10px 12px;
+    padding: 10px 12px 10px 12px;
     border: 1px solid #c2c2c2;
     border-radius: var(--br);
     cursor: pointer;
@@ -48,30 +47,41 @@ section.card-front{
     transition: all 0.2s ease;
     img{
         width: 100%;
-        height: 55%;
+        height: 50%;
         border-radius: var(--br-img);
         object-fit: cover;
     }
 
     .description{
+        height: 45%;
         text-align: start;
-        padding: 10px 0;
-        span{
-            color: #606063;
-            font-size: 12px;
-        }
-        .name{
-            padding-top: 7px;
-            color:#1a1a1a;
-            font-weight: 700;
-            font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-between;
+        .prod-name{
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            // padding-top: 5px;
+            // padding-bottom: 15px;
+            height: 50%;
+            span{
+                color: #606063;
+                font-size: 12px;
+            }
+            .name{
+                color:#1a1a1a;
+                font-weight: 700;
+                font-size: 20px;
+                height: fit-content;
+            }
         }
         i{
             font-size: 12px;
             color: #1a1a1a;
         }
         .price{
-            padding-top: 7px;
             font-size: 20px;
             font-weight: 700;
             color: #626262;
