nav open/close works

--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -36,6 +36,9 @@ header {
 .fa-moon:hover {
   cursor: pointer;
 }
+.fa-bars:hover {
+  cursor: pointer;
+}
 .mobile-nav-list-item {
   display: none;
 }
