--- a/scss/product-card.scss
+++ b/scss/product-card.scss
@@ -18,7 +18,7 @@
     column-gap: 1.2rem;
     row-gap: 1.2rem;
     width: min(var(--max-width-general),100vw - 2 * var(--padding-general-sides));
-    margin-top: var(--margin-vert-between-sections);
+    margin-top: 15px;
     margin-bottom: var(--margin-vert-between-sections);
     margin-inline: auto;
 }
@@ -45,23 +45,28 @@ section.card-front{
     cursor: pointer;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
     transition: all 0.2s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     img{
         width: 100%;
-        height: 50%;
+        height: 55%;
         border-radius: var(--br-img);
         object-fit: cover;
     }
 
     .description{
-        height: 45%;
+        height: 40%;
         text-align: start;
         display: flex;
         flex-direction: column;
         text-align: center;
         justify-content: space-between;
+        align-items: center;
         .prod-name{
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 5px;
             // padding-top: 5px;
             // padding-bottom: 15px;
@@ -69,19 +74,29 @@ section.card-front{
             span{
                 color: #606063;
                 font-size: 12px;
+                width: fit-content;
             }
             .name{
+                width: auto;
                 color:#1a1a1a;
                 font-weight: 700;
                 font-size: 20px;
-                height: fit-content;
+                height: 100%;
+                line-height: 1;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
             }
         }
-        i{
-            font-size: 12px;
-            color: #1a1a1a;
+        .ratings{
+            width: fit-content;
+            i{
+                font-size: 12px;
+                color: #1a1a1a;
+            }
         }
         .price{
+            width: fit-content;
             font-size: 20px;
             font-weight: 700;
             color: #626262;
@@ -226,9 +241,9 @@ section.card-front{
     .grid-container {
       display: flex;
       flex-direction: column;
-      margin: var();
       width: 100vw;
       margin: var(--margin-vert-between-sections) 0;
+      margin-top: 15px;
       gap: 4em;
       
       .product-card{
@@ -241,13 +256,44 @@ section.card-front{
             border: none;
             box-shadow: none;
             img{
-                height: 70%;
+                height: 72%;
                 border-radius: 0;
-              }
-              .description{
-                  padding: 10px 12px;
-              }
-          }
+            }
+            .description{
+                padding: 10px 12px;
+                display: flex;
+                flex-flow: row wrap;
+                align-items: flex-start;
+                column-gap: 5%;
+                row-gap: 0;
+                .prod-name{
+                    width: 70%;
+                    display: flex;
+                    align-items: flex-start;
+                    span{
+
+                    }
+                    .name{
+                        width: 100%;
+                        display: flex;
+                        justify-content: flex-start;
+                        text-align: left;
+                    }
+                }
+                .ratings{
+                    width: 25%;
+                    display: flex;
+                    justify-content: flex-end;
+                    padding-right: 5px;
+                }
+                .price{
+                    padding-right: 5px;
+                    width: 100%;
+                    text-align: right;
+                    vertical-align: top;
+                }
+            }
+        }
       }
     }
 }
