--- a/scss/product-card.scss
+++ b/scss/product-card.scss
@@ -107,19 +107,26 @@ section.card-front{
 //     display: none;
 // }
 
+
 // modal only on bigger screens
 @media only screen and (min-width: 604px){
-    section.product-modal{
-        position: fixed;
+    dialog.product-modal{
+        border: 1px solid lightgray;
+        border-radius: 15px;
+        background: #e0e0e0;
+        box-shadow:  8px 8px 50px #bcbcbc, -8px -8px 50px #ffffff;
         z-index: 3;
+        position: fixed;
         left: 50%;
         top: 50%;
         transform: translate(-50%,-45%);
-        width: 60vw;
+        width: 80vw;
         max-width: 1100px;
         min-width: 800px;
-        height: 65vh;
-        overflow: auto; /* Enable scroll if needed */
+        min-height: fit-content;
+        height: 55vh;
+        max-height: 800px;
+        // overflow: auto; /* Enable scroll if needed */
         
         .product-details{
             position: absolute;
@@ -373,7 +380,3 @@ section.card-front{
 //     }
 // }
 
-
-.hidden{
-    display: none;
-}
