Introducing swiper - img object fit not working

--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -69,3 +69,23 @@ body {
 .hidden {
   display: none;
 }
+
+.swiper {
+  max-height: 50%;
+  border-radius: 0.25rem;
+  border: 1px solid red;
+}
+
+.swiper-wrapper {
+}
+
+.swiper-slide {
+  border: 1px solid blue;
+}
+
+.swiper-slide > img {
+  width: 100% !important;
+  height: auto !important;
+  object-fit: cover !important;
+  object-position: center !important;
+}
