--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -21,8 +21,17 @@ header {
   padding-top: 1rem;
   align-items: center;
 }
+
+.logo-container{
+  display: flex;
+  gap: 10PX;
+  align-items: center;
+}
 .logo {
   font-size: 1.75rem;
+}
+.logo-art{
+  height: 30px;
 }
 
 .nav__list {
