--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -17,8 +17,19 @@
 }
 
 
-
-
+.welcome__text {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.title {
+  text-align: center;
+  font-size: 3rem;
+}
+.welcome__image {
+  height: 400px;
+}
 
 
 
