--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -42,7 +42,7 @@ body {
 
 /* <- welcome -> */
 .welcome-container {
-  height: 100vh;
+  height: calc(100vh - 60px);
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -61,8 +61,24 @@ body {
   margin-inline: auto;
 }
 
-/* Temporary filter section - to be moved to filter file */
-
 .hidden {
   display: none;
+}
+/* Temporary welcome*/
+
+.welcome__image-container {
+  border: 2px solid red;
+  height: 200px;
+  width: 400px;
+  background-image: url(../images/welcome/keykapsWelcome.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title {
+  text-align: center;
+  font-size: 3rem;
+}
+.welcome__image {
+  width: 400px;
 }
