--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -78,8 +78,39 @@ body {
 
 /* Minimum space for active bns to appear */
 .subfilter-active {
-  min-height: 40px;
+  min-height: 30px;
 }
 .subfilter__selection {
   --animate-duration: 0.2s;
+}
+
+.products__filter {
+  margin-bottom: 1.3rem;
+}
+
+.subfilter-btn .fa-solid {
+  font-size: smaller;
+  color: hsl(0, 0%, 35%);
+  pointer-events: none;
+}
+
+.subfilter-btn {
+  background-color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 55%);
+  border-radius: 0.4rem;
+  min-width: max-content;
+}
+
+.card-front {
+  border-radius: 0.5rem !important;
+}
+
+.active-filter-btn {
+  padding: 0.25rem 0.75rem !important;
+  background-color: hsl(0, 0%, 85%);
+  border-radius: 0.25rem;
+}
+
+.active-filter-btn :nth-child(2) {
+  color: hsl(0, 0%, 25%);
 }
